@@ -14,7 +14,7 @@ cache:
 env:
   global:
     - MONGODB_VERSION=3.2.4
-    - FREEBAYES_VERSION="v1.0.2-npg-Aug2016"
+    - FREEBAYES_VERSION="v1.1.0"
     - BIOBAMBAM_VERSION="2.0.50-release-20160705161609"
     - HTSLIB_VERSION="1.3.2"
     - SAMTOOLS1_VERSION="1.3.1-npg-Sep2016"
